# auth2fa

./: RELEASES.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  logging.rs  main.rs  otpauth.rs  totp.rs
src/components/: AddAccountDialog.tsx  BulkImportDialog.tsx  NamespaceList.tsx  OTPDisplay.tsx  SearchBar.tsx  ToastContainer.tsx  ToastItem.tsx  ToastProvider.tsx
src/hooks/: useBatchedTOTP.ts  useToast.ts
src/lib/: api.ts  logger.ts  toast.ts
