[package]
name = "auth2fa"
version = "0.1.0"
description = "A 2FA Authenticator App"
authors = ["you"]
edition = "2021"

[lib]
name = "auth2fa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Database with SQLCipher support
rusqlite = { version = "0.32", features = ["bundled"] }

# TOTP and crypto
totp-lite = "2.0.1"
base32 = "0.5.1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "local-time"] }
tracing-appender = "0.2"
